# grid-sim-ray-sensor

./: .gitignore  README.md
grid_sim/: CMakeLists.txt  README.md  package.xml
grid_sim/include/srgsim/: GUI.h  SRGEnums.h  Simulator.h
grid_sim/include/srgsim/commands/: CommandHandler.h  ManipulationHandler.h  MoveCommandHandler.h  SpawnCommandHandler.h
grid_sim/include/srgsim/communication/: Communication.h
grid_sim/include/srgsim/containers/: CellPerceptions.h  ContainerUtils.h  Coordinate.h  FloatCoordinate.h  Function.h  Perception.h  SimCommand.h  SimPerceptions.h
grid_sim/include/srgsim/msgs/: SimCommandMsg.capnp  SimPerceptionsMsg.capnp  SimSensorMsg.capnp
grid_sim/include/srgsim/world/: Actuator.h  Cell.h  Door.h  Manipulation.h  Object.h  ObjectDetection.h  Sensor.h  ServiceRobot.h  World.h
grid_sim/src/: GUI.cpp  Simulator.cpp
grid_sim/src/commands/: CommandHandler.cpp  ManipulationHandler.cpp  MoveCommandHandler.cpp  SpawnCommandHandler.cpp
grid_sim/src/communication/: Communication.cpp
grid_sim/src/container/: ContainerUtils.cpp  Coordinate.cpp  FloatCoordinate.cpp  Function.cpp
grid_sim/src/world/: Actuator.cpp  Cell.cpp  Door.cpp  Manipulation.cpp  Object.cpp  ObjectDetection.cpp  Sensor.cpp  ServiceRobot.cpp  World.cpp
grid_sim/textures/: Department.tmx  Department.tsx  department_sim.tsx  textures.xcf
